added details and icons,images

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--<< Title >>-->
-  <title>Matias - Personal Portfolio Template</title>
+  <title>Hardik Shali</title>
   <!--<< Favcion >>-->
-  <link rel="shortcut icon" href="assets/img/logo/favicon.png">
+  <link rel="shortcut icon" href="assets/img/logo/favicon (1).ico">
   <!--<< Bootstrap min.css >>-->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <!--<< Aos animation css >>-->
