added new favicon icon

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <!--<< Title >>-->
   <title>Hardik Shali</title>
   <!--<< Favcion >>-->
-  <link rel="shortcut icon" href="assets/img/logo/favicon (1).ico">
+  <link rel="shortcut icon" href="assets/img/logo/letter-h-1.png">
   <!--<< Bootstrap min.css >>-->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <!--<< Aos animation css >>-->
