--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,13 @@
 <head>
   <!--<< Required meta tags >>-->
   <meta charset="UTF-8">
+  <!-- Meta tags for Apple devices -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <!-- Viewport meta tag -->
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <!--<< Title >>-->
   <title>Hardik Shali</title>
   <!--<< Favcion >>-->
